<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name_prod">Wikipedia</string>
    <string name="app_name_beta" tools:ignore="UnusedResources">Wikipedia Beta</string>
    <string name="app_name_alpha" tools:ignore="UnusedResources">Wikipedia Alpha</string>
    <string name="wikimedia">Wikimedia</string>
    <string name="nav_item_back">Back</string>
    <string name="nav_item_forward">Forward</string>
    <string name="search_hint">Search Wikipedia</string>
    <string name="search_hint_search_history">Search history</string>
    <string name="search_hint_search_my_lists">Search my lists</string>
    <string name="search_hint_search_reading_list">Search reading list</string>
    <string name="search_hint_search_languages">Search for a language</string>
    <string name="nav_item_history">History</string>
    <string name="error_network_error">Cannot connect to the Internet.</string>
    <string name="page_error_retry">Retry</string>
    <string name="page_error_back_to_main">Go back</string>
    <string name="menu_clear_all_history">Clear history</string>
    <string name="history_item_deleted">%s removed from history</string>
    <string name="history_items_deleted">%d articles removed from history</string>
    <string name="history_item_delete_undo">Undo</string>
    <string name="app_settings">App settings</string>
    <string name="dialog_title_clear_history">Clear browsing history</string>
    <string name="dialog_message_clear_history">This will delete all of your browsing history, and close any currently open tabs. Are you sure?</string>
    <string name="dialog_message_clear_history_yes">Yes</string>
    <string name="dialog_message_clear_history_no">No</string>
    <string name="share_via">Share via</string>
    <string name="search_redirect_from">Redirected from %s</string>
    <string name="menu_page_show_tabs">Show tabs</string>
    <string name="menu_page_other_languages">Change language</string>
    <string name="menu_page_find_in_page">Find in page</string>
    <string name="menu_page_font_and_theme">Font and theme</string>
    <string name="menu_page_add_to_list">Add to reading list</string>
    <string name="menu_page_share">Share link</string>
    <string name="menu_page_open_a_new_tab">Open a new tab</string>
    <string name="menu_page_reading_lists">Reading lists</string>
    <string name="menu_page_recently_viewed">Recently viewed</string>
    <string name="menu_page_citation">Cite this page</string>
    <string name="menu_page_generate_qr_code">Generate QR code</string>
    <string name="menu_page_share_nfc">Share via NFC</string>
    <string name="menu_long_press_open_page">Open</string>
    <string name="menu_long_press_open_in_new_tab">Open in new tab</string>
    <string name="menu_long_press_copy_page">Copy link address</string>
    <string name="menu_text_select_copy">Copy</string>
    <string name="menu_text_select_define">Define</string>
    <string name="menu_text_select_share">Share</string>
    <string name="menu_text_select_edit_here">Edit here</string>
    <string name="nav_item_nearby">Nearby</string>
    <string name="nearby_zoom_to_location">Zoom to a location on the map</string>
    <string name="nearby_osm_license"><![CDATA[&copy; &nbsp;<a href=\"https://www.openstreetmap.org/copyright/\">OpenStreetMap</a> contributors]]></string>
    <string name="last_updated_text">Last updated %s</string>
    <string name="talk_page_link_text">View talk page</string>
    <string name="edit_history_link_text">View edit history</string>
    <string name="map_view_link_text">View on a map</string>
    <string name="other_languages_indication_text">Read in another language</string>
    <string name="language_count_link_text">Available in %d other languages</string>
    <string name="content_license_html"><![CDATA[Content is available under <a href=\"%1$s\">CC BY-SA 3.0</a> unless otherwise noted]]></string>
    <string name="edit_save_action_license_logged_in"><![CDATA[By publishing, you agree to the <a href="%1$s">Terms of Use</a>, and to irrevocably release your contributions under the <a href="%2$s">CC BY-SA 3.0</a> license.]]></string>
    <string name="edit_save_action_license_anon"><![CDATA[By publishing, you agree to the <a href="%1$s">Terms of Use</a>, and to irrevocably release your contributions under the <a href="%2$s/">CC BY-SA 3.0</a> license. Edits will be attributed to the IP address of your device. If you <a href="https://#login">log in</a>, you will have more privacy.]]></string>
    <string name="preference_title_language">Wikipedia languages</string>
    <string name="langlinks_filter_hint">Search</string>
    <string name="langlinks_empty">This page is not available in other languages.</string>
    <string name="langlinks_no_match">No languages found</string>
    <string name="langlinks_activity_title">Other languages</string>
    <string name="langlinks_your_wikipedia_languages">Your Wikipedia languages</string>
    <string name="menu_save_changes">Publish changes</string>
    <string name="dialog_saving_in_progress">Publishing…</string>
    <string name="edit_saved_successfully">Edit published!</string>
    <string name="dialog_message_edit_failed">Edit failed!</string>
    <string name="dialog_message_edit_failed_retry">Retry</string>
    <string name="dialog_message_edit_failed_cancel">Cancel</string>
    <string name="dialog_message_leaving_edit">Your changes have not been published yet. Are you sure you want to leave this page?</string>
    <string name="dialog_message_leaving_edit_leave">Leave</string>
    <string name="dialog_message_leaving_edit_stay">Stay</string>
    <string name="menu_show_toc">Table of Contents</string>
    <string name="menu_show_text_to_speech">Text-To-Speech</string>
    <string name="citation_first_title">Choose your citation style:</string>
    <string name="citation_apa">APA</string>
    <string name="citation_mla">MLA</string>
    <string name="citation_ieee">IEEE</string>
    <string name="citation_latex">LATEX</string>
    <string name="citation_second_title">Here is your citation!</string>
    <string name="citation_box_text">We are currently generating your citation!\nPlease wait a few seconds....</string>
    <string name="citation_copy_citation">Copy citation</string>
    <string name="nfc_title">Hold your device near another device.</string>
    <string name="nfc_description">Hold your device near another device.</string>
    <string name="nfc_broadcast">Share article</string>
    <string name="nfc_receive">Receive article</string>
    <string name="search_no_results_found">No results found</string>
    <string name="search_reading_list_no_results">No results found in \"%s\"</string>
    <string name="search_reading_lists_no_results">No results found in reading lists</string>
    <string name="search_history_no_results">No results found in history</string>
    <string name="edit_section_captcha_message">To help protect against automated spam, please enter the words that appear below</string>
    <string name="edit_section_captcha_request_an_account_message"><![CDATA[Can\'t see the image? <a href="https://en.wikipedia.org/wiki/Wikipedia:Request_an_account">Request an account</a>]]></string>
    <string name="edit_section_captcha_hint">Repeat words from above</string>
    <string name="title_captcha">Enter CAPTCHA</string>
    <string name="edit_section_captcha_reload">Tap CAPTCHA to reload</string>
    <string name="nav_item_login">Log in to Wikipedia</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_2fa_hint">Two-Factor Authentication Code</string>
    <string name="login_2fa_other_workflow_error_msg">Two-factor authentication required!  Please return to the main activity and log in with your 2FA token, then retry.</string>
    <string name="menu_login">Log in</string>
    <string name="login_activity_title">Log in to Wikipedia</string>
    <string name="login_in_progress_dialog_message">Logging you in…</string>
    <string name="login_success_toast">Logged in successfully!</string>
    <string name="reset_password_title">Set your password</string>
    <string name="reset_password_description">You logged in with a temporary password. To finish logging in, please set your new password here.</string>
    <string name="reset_password_hint">New password</string>
    <string name="reset_password_button">Save and log in</string>
    <string name="preference_title_logout">Log out</string>
    <string name="toast_logout_complete">Logged out</string>
    <string name="history_empty_title">No recently viewed articles</string>
    <string name="history_empty_message">Track what you\'ve been reading here.</string>
    <string name="history_offline_articles_toast">Some articles in history may not be viewable while offline.</string>
    <string name="search_empty_message">Search and read the free encyclopedia in your language</string>
    <string name="search_empty_message_multilingual_upgrade">Search Wikipedia in more languages</string>
    <string name="delete_selected_items">Delete selected items</string>
    <string name="wp_stylized"><![CDATA[<big>W</big>IKIPEDI<big>A</big>]]></string>
    <string name="create_account_username_hint">Username</string>
    <string name="login_dont_have_account">Don\'t have an account?</string>
    <string name="login_join_wikipedia">Join Wikipedia</string>
    <string name="login_forgot_password">Forgot your password?</string>
    <string name="create_account_already_have">Already have an account?</string>
    <string name="create_account_activity_title">Create an account</string>
    <string name="dialog_create_account_checking_progress">Verifying</string>
    <string name="create_account_email_hint">Email (Optional)</string>
    <string name="create_account_password_repeat_hint">Repeat password</string>
    <string name="create_account_passwords_mismatch_error">Passwords don\'t match</string>
    <string name="create_account_email_error">Invalid email address</string>
    <string name="create_account_username_error">Invalid characters in username</string>
    <string name="create_account_password_error">The password is invalid</string>
    <string name="create_account_generic_error">Could not create account</string>
    <string name="create_account_next">Next</string>
    <string name="email_recommendation_dialog_title">Create account with no email address?</string>
    <string name="email_recommendation_dialog_message"><![CDATA[Although the email address is optional, it is <b>highly recommended</b>, since an email is needed for account recovery if you ever lose your password.]]></string>
    <string name="email_recommendation_message">Recommended since email is needed for account recovery.</string>
    <string name="email_recommendation_dialog_create_without_email_action">Continue without email</string>
    <string name="email_recommendation_dialog_create_with_email_action">Add an email address</string>
    <string name="create_account_button">Create account</string>
    <string name="create_account_name_unavailable">The user name \"%s\" is not available. Please choose a different name.</string>
    <string name="create_account_ip_block_message">Sorry, your IP address is currently blocked from creating new accounts.</string>
    <string name="create_account_ip_block_help_url">https://en.wikipedia.org/wiki/Help:I_have_been_blocked</string>
    <string name="create_account_ip_block_details">Details</string>
    <string name="preferences_general_heading">General</string>
    <string name="wikipedia_app_faq">Wikipedia App FAQ</string>
    <string name="edit_preview_fetching_dialog_message">Fetching preview…</string>
    <string name="send_feedback">Send app feedback</string>
    <string name="my_notes">My Notes</string>
    <string name="add_new_note">Add Note</string>
    <string name="button_return">Return</string>
</resources>