<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_citation_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base10"
    tools:context="org.wikipedia.citation.CitationActivity">

    <!-- Old code - ?attr does not work for background -->
    <!--<FrameLayout-->
    <!--android:id="@+id/page_toolbar_container"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:background="?attr/page_toolbar_color"-->
    <!--android:elevation="4dp">-->

    <FrameLayout
        android:id="@+id/page_toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:elevation="4dp">

        <!--Old code - ?attr does not work for text color -->
        <!--<android.support.v7.widget.Toolbar-->
        <!--android:id="@+id/page_toolbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="?attr/actionBarSize"-->
        <!--android:theme="@style/PageToolbarTheme"-->
        <!--app:titleTextColor="?attr/page_toolbar_icon_color"-->
        <!--app:navigationIcon="@drawable/ic_icon_w_back">-->

        <android.support.v7.widget.Toolbar
            android:id="@+id/page_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/PageToolbarTheme"
            app:titleTextColor="#FFFFFF"
            app:navigationIcon="@drawable/ic_icon_w_back">
        </android.support.v7.widget.Toolbar>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/globalLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/firstTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:text="@string/citation_first_title"
                android:textColor="@color/color_state_white"/>

            <LinearLayout
                android:id="@+id/firstButtonRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center">

                <Button
                    android:id="@+id/button_apa"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:text="@string/citation_apa"/>

                <Button
                    android:id="@+id/button_mla"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:text="@string/citation_mla"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/secondButtonRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/button_ieee"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:text="@string/citation_ieee" />

                <Button
                    android:id="@+id/button_latex"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:text="@string/citation_latex" />
            </LinearLayout>

            <TextView
                android:id="@+id/secondTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textSize="30sp"
                android:text="@string/citation_second_title"
                android:textColor="@color/color_state_white"/>

            <TextView
                android:id="@+id/citation_box_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="150dp"
                android:maxHeight="150dp"
                android:layout_margin="15dp"
                android:padding="15dp"
                android:text="@string/citation_box_text"
                android:background="@drawable/citation_box"/>

            <Button
                android:id="@+id/button_copy_citation"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="#FFFFFF"
                android:text="@string/citation_copy_citation"/>

        </LinearLayout>
    </FrameLayout>
</FrameLayout>
