<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAD2AC">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:background="#247B7B">

        <TextView android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/my_notes"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="#000000">
        </TextView>

    </LinearLayout>

    <ListView
        android:id="@+id/notes_listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_below="@+id/linearLayout1"
        android:divider="@android:color/transparent"
        android:stackFromBottom="false"
        android:transcriptMode="alwaysScroll"
        tools:listitem="@layout/item_notes" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:padding="5dp"
        android:gravity="end">

        <Button
            android:id="@+id/button_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/button_return"
            android:textColor="#FFFFFF"
            style="@style/Widget.AppCompat.Button.Colored"/>

        <Button
            android:id="@+id/button_add_new_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/add_new_note"
            android:textColor="#FFFFFF"
            style="@style/Widget.AppCompat.Button.Colored"/>



    </LinearLayout>

</RelativeLayout>